--- a/documentation/coverage.html
+++ b/documentation/coverage.html
@@ -382,6 +382,42 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#bullModuleOptions">src/config/bull.config.ts</a>
+            </td>
+            <td>variable</td>
+            <td>bullModuleOptions</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#elasticSearchModuleOptions">src/config/elastic-search.config.ts</a>
+            </td>
+            <td>variable</td>
+            <td>elasticSearchModuleOptions</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#cacheModuleOptions">src/config/redis.config.ts</a>
+            </td>
+            <td>variable</td>
+            <td>cacheModuleOptions</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./classes/TypeOrmConfig.html">src/config/typeorm.config.ts</a>
             </td>
             <td>class</td>
@@ -910,6 +946,42 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                <a href="./classes/ImagesUploadDto.html">src/features/optimize/dto/images-upload.dto.ts</a>
+            </td>
+            <td>class</td>
+            <td>ImagesUploadDto</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/2)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/functions.html#imageProcessor">src/features/optimize/image.processor.ts</a>
+            </td>
+            <td>function</td>
+            <td>imageProcessor</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./controllers/OptimizeController.html">src/features/optimize/optimize.controller.ts</a>
+            </td>
+            <td>controller</td>
+            <td>OptimizeController</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/3)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./classes/CreatePostDto.html">src/features/posts/dto/create-post.dto.ts</a>
             </td>
             <td>class</td>
@@ -958,6 +1030,18 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                <a href="./injectables/PostsSearchService.html">src/features/posts/posts-search.service.ts</a>
+            </td>
+            <td>injectable</td>
+            <td>PostsSearchService</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/8)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./controllers/PostsController.html">src/features/posts/posts.controller.ts</a>
             </td>
             <td>controller</td>
@@ -976,7 +1060,19 @@
             <td>PostsService</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/8)</span>
+                <span class="coverage-count">(0/9)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./interfaces/PostSearchDocument.html">src/features/posts/types/post-search-document.interface.ts</a>
+            </td>
+            <td>interface</td>
+            <td>PostSearchDocument</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/5)</span>
             </td>
         </tr>
         <tr class="low">
@@ -1438,6 +1534,18 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                <a href="./classes/PaginationWithStartIdDto.html">src/utils/dto/pagination-with-start-id.dto.ts</a>
+            </td>
+            <td>class</td>
+            <td>PaginationWithStartIdDto</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/4)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./classes/PaginationDto.html">src/utils/dto/pagination.dto.ts</a>
             </td>
             <td>class</td>
@@ -1493,6 +1601,18 @@
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
                 <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./injectables/HttpCacheInterceptor.html">src/utils/http-cache.interceptor.ts</a>
+            </td>
+            <td>injectable</td>
+            <td>HttpCacheInterceptor</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/2)</span>
             </td>
         </tr>
         <tr class="low">
