--- a/documentation/dependencies.html
+++ b/documentation/dependencies.html
@@ -50,6 +50,10 @@
     </ol>
     <ul class="dependencies-list">
         <li>
+            <b>@elastic/elasticsearch</b> : ^8.2.1</li>
+        <li>
+            <b>@nestjs/bull</b> : ^0.5.5</li>
+        <li>
             <b>@nestjs/common</b> : ^8.4.4</li>
         <li>
             <b>@nestjs/config</b> : ^2.0.0</li>
@@ -57,6 +61,8 @@
             <b>@nestjs/core</b> : ^8.4.4</li>
         <li>
             <b>@nestjs/cqrs</b> : ^8.0.4</li>
+        <li>
+            <b>@nestjs/elasticsearch</b> : ^8.1.0</li>
         <li>
             <b>@nestjs/jwt</b> : ^8.0.0</li>
         <li>
@@ -74,11 +80,15 @@
         <li>
             <b>@nestjs/typeorm</b> : ^8.0.3</li>
         <li>
-            <b>@types/nodemailer</b> : ^6.4.4</li>
-        <li>
             <b>aws-sdk</b> : ^2.1128.0</li>
         <li>
             <b>bcrypt</b> : ^5.0.1</li>
+        <li>
+            <b>bull</b> : ^4.8.3</li>
+        <li>
+            <b>cache-manager</b> : ^3.6.3</li>
+        <li>
+            <b>cache-manager-redis-store</b> : ^2.0.0</li>
         <li>
             <b>class-transformer</b> : ^0.5.1</li>
         <li>
