--- a/documentation/miscellaneous/functions.html
+++ b/documentation/miscellaneous/functions.html
@@ -67,6 +67,9 @@
                             <a href="#getLogLevels" title="src/utils/get-log-levels.ts" ><b>getLogLevels</b>&nbsp;&nbsp;&nbsp;(src/.../get-log-levels.ts)</a>
                         </li>
                         <li>
+                            <a href="#imageProcessor" title="src/features/optimize/image.processor.ts" ><b>imageProcessor</b>&nbsp;&nbsp;&nbsp;(src/.../image.processor.ts)</a>
+                        </li>
+                        <li>
                             <a href="#LocalFilesInterceptor" title="src/features/local-files/local-files.interceptor.ts" ><b>LocalFilesInterceptor</b>&nbsp;&nbsp;&nbsp;(src/.../local-files.interceptor.ts)</a>
                         </li>
                         <li>
@@ -166,6 +169,76 @@
                     </div>
                     <div class="io-description">
                         
+                    </div>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</section>    <h3>src/features/optimize/image.processor.ts</h3>
+    <section>
+    <h3></h3>    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="imageProcessor"></a>
+                    <span class="name">
+                        <span ><b>imageProcessor</b></span>
+                        <a href="#imageProcessor"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
+<code>imageProcessor(job: Job, doneCallback: DoneCallback)</code>
+                </td>
+            </tr>
+
+
+
+
+            <tr>
+                <td class="col-md-4">
+
+                    <div class="io-description">
+                        <b>Parameters :</b>
+                        
+                        <table class="params">
+                            <thead>
+                                <tr>
+                                    <td>Name</td>
+                                    <td>Type</td>
+                                    <td>Optional</td>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>job</td>
+                                    <td>
+                                            <code>Job</code>
+                                    </td>
+
+                                    <td>
+                                        No
+                                    </td>
+
+
+                                </tr>
+                                <tr>
+                                    <td>doneCallback</td>
+                                    <td>
+                                            <code>DoneCallback</code>
+                                    </td>
+
+                                    <td>
+                                        No
+                                    </td>
+
+
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div>
                     </div>
                 </td>
             </tr>
