--- a/documentation/controllers/EmailSchedulingController.html
+++ b/documentation/controllers/EmailSchedulingController.html
@@ -137,8 +137,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="30"
-                            class="link-to-prism">src/features/email-scheduling/email-scheduling.controller.ts:30</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="22"
+                            class="link-to-prism">src/features/email-scheduling/email-scheduling.controller.ts:22</a></div>
                 </td>
             </tr>
 
@@ -183,8 +183,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="24"
-                            class="link-to-prism">src/features/email-scheduling/email-scheduling.controller.ts:24</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="16"
+                            class="link-to-prism">src/features/email-scheduling/email-scheduling.controller.ts:16</a></div>
                 </td>
             </tr>
 
@@ -236,14 +236,7 @@
 
 
     <div class="tab-pane fade  tab-source-code" id="c-source">
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {
-  Body,
-  ClassSerializerInterceptor,
-  Controller,
-  Post,
-  UseGuards,
-  UseInterceptors,
-} from &#x27;@nestjs/common&#x27;;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Body, Controller, Post, UseGuards } from &#x27;@nestjs/common&#x27;;
 import { ApiTags } from &#x27;@nestjs/swagger&#x27;;
 import { JwtAuthenticationGuard } from &#x27;../../authentication/jwt-authentication.guard&#x27;;
 import { EmailScheduleDto } from &#x27;./dto/email-schedule.dto&#x27;;
@@ -251,7 +244,6 @@ import { EmailSchedulingService } from &#x27;./email-scheduling.service&#x27;;
 
 @Controller(&#x27;email-scheduling&#x27;)
 @ApiTags(&#x27;email-scheduling&#x27;)
-@UseInterceptors(ClassSerializerInterceptor)
 export class EmailSchedulingController {
   constructor(
     private readonly emailSchedulingService: EmailSchedulingService,
