--- a/documentation/miscellaneous/variables.html
+++ b/documentation/miscellaneous/variables.html
@@ -61,6 +61,15 @@
                 <td class="col-md-4">
                     <ul class="index-list">
                         <li>
+                            <a href="#bullModuleOptions" title="src/config/bull.config.ts" ><b>bullModuleOptions</b>&nbsp;&nbsp;&nbsp;(src/.../bull.config.ts)</a>
+                        </li>
+                        <li>
+                            <a href="#cacheModuleOptions" title="src/config/redis.config.ts" ><b>cacheModuleOptions</b>&nbsp;&nbsp;&nbsp;(src/.../redis.config.ts)</a>
+                        </li>
+                        <li>
+                            <a href="#elasticSearchModuleOptions" title="src/config/elastic-search.config.ts" ><b>elasticSearchModuleOptions</b>&nbsp;&nbsp;&nbsp;(src/.../elastic-search.config.ts)</a>
+                        </li>
+                        <li>
                             <a href="#getPaginationProps" title="src/utils/get-pagination-props.ts" ><b>getPaginationProps</b>&nbsp;&nbsp;&nbsp;(src/.../get-pagination-props.ts)</a>
                         </li>
                         <li>
@@ -91,6 +100,121 @@
     </table>
 </section>
 
+    <h3>src/config/bull.config.ts</h3>
+    <section>
+    <h3></h3>    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="bullModuleOptions"></a>
+                    <span class="name">
+                        <span ><b>bullModuleOptions</b></span>
+                        <a href="#bullModuleOptions"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Type : </i>    <code>SharedBullAsyncConfiguration</code>
+
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Default value : </i><code>{
+  imports: [ConfigModule],
+  inject: [ConfigService],
+  useFactory: (configService: ConfigService) &#x3D;&gt; ({
+    redis: {
+      host: configService.get(&#x27;redis.host&#x27;),
+      port: configService.get(&#x27;redis.port&#x27;),
+    },
+  }),
+}</code>
+                    </td>
+                </tr>
+
+
+        </tbody>
+    </table>
+</section>
+    <h3>src/config/redis.config.ts</h3>
+    <section>
+    <h3></h3>    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="cacheModuleOptions"></a>
+                    <span class="name">
+                        <span ><b>cacheModuleOptions</b></span>
+                        <a href="#cacheModuleOptions"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Type : </i>    <code>CacheModuleAsyncOptions</code>
+
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Default value : </i><code>{
+  imports: [ConfigModule],
+  inject: [ConfigService],
+  useFactory: (configService: ConfigService) &#x3D;&gt; ({
+    store: redisStore,
+    host: configService.get(&#x27;redis.host&#x27;),
+    port: configService.get(&#x27;redis.port&#x27;),
+    ttl: 120,
+  }),
+}</code>
+                    </td>
+                </tr>
+
+
+        </tbody>
+    </table>
+</section>
+    <h3>src/config/elastic-search.config.ts</h3>
+    <section>
+    <h3></h3>    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="elasticSearchModuleOptions"></a>
+                    <span class="name">
+                        <span ><b>elasticSearchModuleOptions</b></span>
+                        <a href="#elasticSearchModuleOptions"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Type : </i>    <code>ElasticsearchModuleAsyncOptions</code>
+
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Default value : </i><code>{
+  imports: [ConfigModule],
+  inject: [ConfigService],
+  useFactory: (configService: ConfigService) &#x3D;&gt; ({
+    node: configService.get(&#x27;elasticSearch.node&#x27;),
+    auth: {
+      username: configService.get(&#x27;elasticSearch.auth.username&#x27;),
+      password: configService.get(&#x27;elasticSearch.auth.password&#x27;),
+    },
+  }),
+}</code>
+                    </td>
+                </tr>
+
+
+        </tbody>
+    </table>
+</section>
     <h3>src/utils/get-pagination-props.ts</h3>
     <section>
     <h3></h3>    <table class="table table-sm table-bordered">
@@ -367,10 +491,10 @@
                     <td class="col-md-4">
                         <i>Default value : </i><code>{
   imports: [ConfigModule],
+  inject: [ConfigService],
   useFactory: async (
     configService: ConfigService,
   ): Promise&lt;TypeOrmModuleOptions&gt; &#x3D;&gt; TypeOrmConfig.getOrmConfig(configService),
-  inject: [ConfigService],
 }</code>
                     </td>
                 </tr>
